docs/style/style.css
@import url("https://fonts.googleapis.com/css2?family=Cutive+Mono&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Tilt+Neon&display=swap");
* {
  padding: 0;
  margin: 0;
  list-style: none;
}

a:link,
a:visited,
a:hover,
a:active {
  text-decoration: none;
  color: white;
}

h1 {
  font-size: 42px;
  font-family: "Cutive Mono", monospace;
}

h2 {
  font-size: 32px;
  font-family: "Cutive Mono", monospace;
}

p {
  font-size: 20px;
  font-family: "Tilt Neon", cursive;
}

body {
  scroll-behavior: smooth;
}

.bodyScrollDisabled {
  height: 100vh;
  overflow: hidden;
}

.wrapper {
  max-width: 1440px;
  padding: 100px 6% 30px;
  margin: auto;
}

.navbar {
  background-color: white;
  width: 88%;
  padding: 15px 6%;
  height: 40px;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
  z-index: 99;
}
.navbar--logo {
  font-size: 24px;
  background-color: black;
  border-radius: 50%;
  color: white;
  width: 37px;
  height: 37px;
  padding: 5px;
  display: flex;
  align-items: center;
  justify-content: center;
  cursor: pointer;
}
.navbar--menu {
  width: 32px;
  height: 20px;
}
.navbar--menu__hamburger {
  display: flex;
  flex-direction: column;
  gap: 5px;
  cursor: pointer;
}
.navbar--menu__hamburger span {
  display: block;
  background-color: black;
  height: 3px;
  width: 80%;
  transition: 0.3s ease-in-out;
}
.navbar--menu__hamburger span:nth-child(even) {
  align-self: flex-end;
}
.navbar--menu__hamburger:hover span {
  width: 32px;
}
.navbar--menu .hamburgerClickEffect {
  position: relative;
  z-index: 99;
}
.navbar--menu .hamburgerClickEffect span {
  background-color: white;
  position: fixed;
}
.navbar--menu .hamburgerClickEffect span:nth-child(even) {
  display: none;
}
.navbar--menu .hamburgerClickEffect span:nth-child(odd) {
  width: 32px;
}
.navbar--menu .hamburgerClickEffect span:first-child {
  position: absolute;
  top: 5px;
  transform: rotate(45deg);
}
.navbar--menu .hamburgerClickEffect span:last-child {
  position: absolute;
  top: 5px;
  transform: rotate(-45deg);
}
.navbar--menu__list {
  position: fixed;
  width: 100%;
  height: 100vh;
  left: 0;
  top: 0;
  background-color: rgba(0, 0, 0, 0.672);
  color: white;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  gap: 16px;
  font-size: 32px;
  transform: translateY(0%);
  transition: 0.3s ease-in-out;
}
.navbar--menu__list li {
  transform: translateY(0%);
  opacity: 1;
  transition: 0.3s ease-in-out;
}
.navbar--menu__list .liClickEffect {
  position: fixed;
  transform: translateY(-200%);
  opacity: 0;
}
.navbar--menu .menuClickEffect {
  transform: translateY(-100%);
}

.main {
  display: flex;
  flex-direction: column;
  gap: 30px;
}
.main--text {
  max-width: 400px;
}
.main--text__title {
  font-weight: bold;
}
.main--media {
  width: 100%;
  max-width: 500px;
}
.main--media__img1 {
  width: 100%;
  height: auto;
}

.about {
  display: flex;
  flex-direction: column;
}
.about--text {
  width: 100%;
  display: flex;
  flex-direction: column;
  gap: 47px;
  height: 258px;
}
.about--media {
  width: 100%;
  height: auto;
  margin-top: 30px;
}
.about--media__img {
  display: block;
  width: 100%;
  height: auto;
}

.skills {
  display: flex;
  flex-direction: column;
  align-items: center;
  margin-top: 50px;
  gap: 2.5rem;
}
.skills--carousel {
  display: flex;
  width: 100%;
  overflow-x: scroll;
}
.skills--carousel .carousel--wrapper {
  max-width: 620px;
  display: flex;
  flex-direction: row;
  gap: 20px;
}
.skills--carousel .carousel--wrapper__item {
  width: 60px;
  height: auto;
}
.skills--carousel .carousel--wrapper__item img {
  width: 100%;
  height: auto;
}
.skills--carousel::-webkit-scrollbar {
  display: none;
}

.skillPc {
  display: none;
}

.experiences .experience {
  position: sticky;
  top: 0vh;
  padding-top: 36px;
  padding-bottom: 64px;
  border-radius: 10px;
  background-color: white;
}
.experiences .experience--media {
  width: 100%;
  height: auto;
  display: flex;
  justify-content: center;
  align-items: center;
}
.experiences .experience--media__img {
  width: 100%;
}
.experiences .experience--txt {
  display: flex;
  flex-direction: column;
}
.experiences .experience--txt__year {
  font-size: 16px;
  margin-bottom: 8px;
}
.experiences .experience--txt__title {
  margin-bottom: 16px;
  font-size: 48px;
}
.experiences .experience--txt__description {
  font-size: 20px;
}

.contact {
  text-align: center;
  display: flex;
  flex-direction: column;
  gap: 30px;
}
.contact .contactContainer {
  display: flex;
  flex-direction: column;
  gap: 2.5rem;
}
.contact .contactContainer--social {
  display: flex;
  flex-direction: column;
  gap: 1.5rem;
  margin-top: 30px;
  margin-left: auto;
  margin-right: auto;
}
.contact .contactContainer--social__item a {
  display: flex;
  justify-content: left;
  align-items: center;
  gap: 1.5rem;
  font-size: 24px;
  font-family: "Tilt Neon", cursive;
  color: black;
}
.contact .contactContainer--social__item a .socialIcon {
  width: 40px;
  height: auto;
}
.contact .contactContainer--social__item a .socialIcon img {
  display: block;
  width: 100%;
  height: auto;
}
.contact .contactContainer .form-wrapper {
  display: flex;
  flex-direction: column;
  align-items: center;
  padding: 5px;
}
.contact .contactContainer .form-wrapper .form--field {
  position: relative;
  margin-bottom: 35px;
  width: 100%;
  max-width: 300px;
}
.contact .contactContainer .form-wrapper .form--field textarea {
  display: block;
  margin-right: 0;
  height: 300px;
}
.contact .contactContainer .form-wrapper .form--field__label {
  position: absolute;
  font-family: "Tilt Neon", cursive;
  font-size: 20px;
  top: 10px;
  left: 16px;
  color: #8c9198;
  transition: 0.3s ease-in-out;
}
/* ... */

